# DevPet

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  STATE-REFERENCE.md  package-lock.json  package.json
scripts/: generate-assets.cjs  generate-readme-assets.cjs  generate-ui-mockups.cjs
src/: about.html  achievements-page.js  achievements.html  animator.js  app.js  character.js  dashboard.html  dashboard.js  debug.html  index.html  main.js  panel-common.css  personal-bests-page.js  personal-bests.html  session-page.js  session.html  settings-page.js  settings.html  settings.js  skills-page.js  skills.html  speech-bubble.js  speech.html  sprite-editor.html  styles.css  timer.js  toast-window.js  toast.html  today-wins-page.js  today-wins.html  weekly-page.js  weekly.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/config/: animations.js  learningResources.json  skinTones.js
src/core/: Database.js  DatabaseReader.js  EventBus.js  GameLoop.js  TauriBridge.js  UpdateChecker.js
src/ui/: AboutPanel.js  AchievementPanel.js  AchievementToast.js  PersonalBestPanel.js  ProjectDisplay.js  ResourcePanel.js  SessionContextDisplay.js  SessionPanel.js  SettingsPanel.js  SkillPanel.js  (+4 more)
tools/: claude-code-hook.sh  export-spritesheet.html  generate-spritesheet.cjs  install-hooks.sh  make_alien_skin.py  make_arctic_skin.py  make_cyberpunk_skin.py  make_firefighter_skin.py  make_madscientist_skin.py  make_pirate_skin.py  make_retro80s_skin.py  make_tuxedo_skin.py  make_wizard_skin.py
(+44 files in other folders)
